src/test/resources/org/xmlcml/www/convention/simpleUnit/valid/foreign-elements-are-allowed-1.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml:unitList convention="conventions:simpleUnit" xmlns:cml="http://www.xml-cml.org/schema"
                  xmlns:conventions="http://www.xml-cml.org/convention/">
    <cml:unit/>
    <x:p xmlns:x="http://www.w3.org/1999/xhtml">
        non cml child - this is fine
    </x:p>
</cml:unitList>

